@@ -142,19 +142,6 @@ foreach ($config_layout as $sec => $list) {
 	}
 }
 
-// we want the maintenance mode at the end of the main section
-if (isset($sections['main']) and is_array($sections['main'])) {
-	foreach ($sections['main'] as $st => $val) {
-		if ($val != 'maintenance_mode') continue;
-		$mv = $val;
-		unset($sections['main'][$st]);
-		$sections['main'] = array_values($sections['main']);
-		array_push($sections['main'],$mv);
-		unset($mv);
-		break;
-	}
-}
-
 // we want the credits at the end of the theme section
 if (isset($sections['theme']) and is_array($sections['theme'])) {
 	foreach ($sections['theme'] as $st => $val) {
