@@ -44,6 +44,7 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
         (2520,'main','email','enable','1','Enable email notifications?','boolean',0,NULL,'','Should email notifications be enabled?  PsychoStats uses the PHP \"mail\" function to send mail.  You must have a functional mail server and PHP must be configured to use it before PsychoStats email notifications will work.  You will also need to enter an administration email address that can be used by PHP to send and receive emails.'),
         (2521,'main','email','admin_email','','Administrator Email Address','text',0,'email','','The overall administrator email address for this PsychoStats installation.  Used in administrator email notifications.  This email address must be able to be used by the PHP \"mail\" function.  You must have a working email server and PHP must be configured to use it before email notifications will work.  You must also enable email notifications, see below.'),
         (2522,'main','maintenance_mode','enable','0','Enable maintenance mode?','boolean',0,NULL,'',''),
+        (2523,'main','notice','enable','0','Enable notice?','boolean',0,NULL,'',''),
         (2527,'theme',NULL,'flags_dir','','Images: Flag directory','text',0,'','','Absolute root directory where flag images are located.\r\n\r\n<b>Recommendation:</b> Leave blank for default. (auto-discovered)'),
         (2528,'theme',NULL,'flags_url','','Images: Flag URL','text',0,'','','Absolute URL for flag images. This should match up to the location of the \"flag directory\" setting. So the images can be referenced within the theme output correctly.\r\n\r\n<b>Recommendation:</b> Leave blank for default (auto-discovered)'),
         (2529,'theme',NULL,'himgs_dir','','Images: Help images directory','text',0,'','','Absolute root directory where help images are located.\r\n\r\n<b>Recommendation:</b> Leave blank for default. (auto-discovered)'),
@@ -113,11 +114,13 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
             </ul>
             </div>',
             'Credits','textarea',0,'','','This is the content of the Credits for PsychoStats for Scoresheet Baseball.  You can edit this to create your own custom thank you list.  It uses html formatting.'),
+        (2703,'main','notice','notice','','Notice','textarea',0,'','','This is the content of the Notice for PsychoStats for VRat.  You can edit this to create your own custom notice.  It uses html formatting.'),
         (2800,'main','security','enable_cookieconsent','1','Enable Cookie Consent?','boolean',0,'','','This enables the cookie consent code for CCPA and GDPR compliance.  Note that if you disable cookie consent, you should also either disable, or modify, the privacy policy.'),
         (5000,'main',NULL,NULL,'Global configuration settings that affect how and what stats are collected and how users interact with your stats website.','General','none',1,NULL,NULL,NULL),
         (5001,'main','awards',NULL,'Settings that affect how often awards are calculated. To create or edit actual awards go to the <a href=\"awards.php\">awards list</a>.','Awards','none',1,NULL,NULL,NULL),
         (5002,'main','email',NULL,'Configuration settings for email notifications. To test your email settings go to <a href=\"email_test.php\">Test Email Notifications</a>.','Email','none',1,NULL,NULL,NULL),
         (5003,'main','maintenance_mode',NULL,'In maintenance mode only the overall header and the admin login will be displayed together with a status message.','Maintenance Mode','none',1,NULL,NULL,NULL),
+        (5004,'main','notice',NULL,'Allows for a short notice message to be displayed which appears below header.','Notice','none',1,NULL,NULL,NULL),
         (5005,'main','errlog',NULL,'Settings to change how error logging is performed and maintained.','Error Logs','none',1,NULL,NULL,NULL),
         (5006,'main','ranking',NULL,'Settings for team and division ranking rules. These settings limit what teams and divisions can rank in the stats. The lower these settings are the more will rank overall. Note: Changing these settings requires the daily updates \'teams\' and \'ranks\' to be processed to see any change.','Ranking','none',1,NULL,NULL,NULL),
         (5007,'main','security',NULL,'Security settings help protect your PsychoStats installation.<br><span class=\"small\"><strong>Most Important:</strong> If you host multiple PsychoStats instances on the same domain all these settings must match, except for the two Privacy Policy settings.</span>','Security','none',1,NULL,NULL,NULL),
