@@ -145,3 +145,7 @@
 <div id="error"><h1>NOTICE:</h1>PSSS is currently in maintenance mode and can only be viewed by users with admin access.</div>
 {/if}
 
+{if $notice}
+<div id="error">{$notice}</div>
+{/if}
+
